--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
-# Ignore node_modules folder
+# Node.js
 node_modules/
+npm-debug.log
+yarn-error.log
 
-# Ignore environment files
-.env
-
-# Ignore logs
-*.log
-
-# Ignore build folders
+# Build directories
 dist/
 build/
 
-# Ignore cache
-.cache/
+# Vercel deployment
+.vercel/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
